--- a/packages/cw22/Cargo.toml
+++ b/packages/cw22/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "cw22"
-version = "0.1.0"
-authors = ["ThienLK1@aura-nw"]
+version = "0.2.0"
+authors = [
+    "ThienLK1@aura-nw",
+    "Kromsten <kromsten@megarock.app>"
+]
 edition = "2021"
 description = "Definition and types for the CosmWasm-22 interface"
 license = "Apache-2.0"
@@ -10,7 +13,7 @@ homepage = "https://cosmwasm.com"
 
 [dependencies]
 cosmwasm-schema = "1.1.0"
-cosmwasm-std = { version = "1.1.0", default-features = false }
+cosmwasm-std = { version = "1.5.8", default-features = false }
 cw-storage-plus = "1.0.1"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
