--- a/packages/cw22/Cargo.toml
+++ b/packages/cw22/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cw22"
-version = "0.5.0"
+version = "1.5.8"
 authors = [
     "ThienLK1@aura-nw",
     "Kromsten <kromsten@megarock.app>"
@@ -12,15 +12,11 @@ repository = "https://github.com/CosmWasm/cw-plus"
 homepage = "https://cosmwasm.com"
 
 
-[features]
-default      = ["cosmwasm_2_1"]
-cosmwasm_2_0 = ["cosmwasm-std/cosmwasm_2_0"]
-cosmwasm_2_1 = ["cosmwasm-std/cosmwasm_2_1"]
 
 [dependencies]
-cosmwasm-schema = "2.1.4"
-cosmwasm-std = { version = "2.1.4", default-features = false, features = ["std"]}
-cw-storage-plus = "2.0.0"
+cosmwasm-schema = "1.5.8"
+cosmwasm-std = { version = "~1.5.8", default-features = false}
+cw-storage-plus = "0.16.0"
 schemars = "0.8.21"
 serde = { version = "1.0.215", default-features = false, features = ["derive"] }
 semver = "1.0.23"
