--- a/packages/cw22/Cargo.toml
+++ b/packages/cw22/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cw22"
-version = "1.5.8"
+version = "1.5.9"
 authors = [
     "ThienLK1@aura-nw",
     "Kromsten <kromsten@megarock.app>"
@@ -15,8 +15,8 @@ homepage = "https://cosmwasm.com"
 
 [dependencies]
 cosmwasm-schema = "1.5.8"
-cosmwasm-std = { version = "~1.5.8", default-features = false}
-cw-storage-plus = "0.16.0"
+cosmwasm-std = { version = "1.5.8", default-features = false }
+cw-storage-plus = { version = "1.2.0", default-features = false}
 schemars = "0.8.21"
 serde = { version = "1.0.215", default-features = false, features = ["derive"] }
 semver = "1.0.23"
